Added some form of mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
         <div class="container-fluid">
             <ul id="navbar">
-                <li id="nav"><a href="https://uogguafak.omeka.net/items/browse"><h4>ITEMS</h4></a></li>
-                <li id="nav"><a href="https://uogguafak.omeka.net/exhibits"><h4>EXHIBITS</h4></a></li>
-                <li id="nav"><a href="https://uogguafak.omeka.net/collections/browse"><h4>COLLECTIONS</h4></a></li>
-                <li id="nav"><a href=""><h4>ABOUT US</h4></a></li>
-                <li id="nav" style="font-size: 1.75rem; color: white; visibility: hidden;"><i class="fa-solid fa-bars"></i></li>
+                <li id="nav" class="main-menu-item"><a href="https://uogguafak.omeka.net/items/browse"><h4>ITEMS</h4></a></li>
+                <li id="nav" class="main-menu-item"><a href="https://uogguafak.omeka.net/exhibits"><h4>EXHIBITS</h4></a></li>
+                <li id="nav" class="main-menu-item"><a href="https://uogguafak.omeka.net/collections/browse"><h4>COLLECTIONS</h4></a></li>
+                <li id="nav" class="main-menu-item"><a href=""><h4>ABOUT US</h4></a></li>
+                <li id="nav" class="resp-menu-item"><i class="fa-solid fa-bars"></i></li>
             </ul>
         </div>
     </div>
@@ -103,17 +103,17 @@
 
     <!-- Contact Us-->
 
-    <div class="container-fluid" style="margin-top: 20%; height: 60%;">
-        <div class="container-fluid" style="height: 100%; width: 50%; background-color:#6A0303; box-shadow: 2px 2px 2px black">
+    <div class="container-fluid" id="contact-us">
+        <div class="container-fluid" id="contact-us-box">
             
-            <div class="row container" style="display: flex; justify-content:left; padding-top: 3%; padding-bottom: 3%;">
+            <div class="row container" id="contact-us-header">
                 <div class="container-fluid">
                     <h3 style="color: white;">Contact Us</h3>
                 </div>
             </div>
 
             <div class="row container-fluid" >
-                <div class="col-lg-6" style="padding-top: 5%; padding-bottom: 5%; border-right: 2px solid black;">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6" style="padding-top: 5%; padding-bottom: 5%; border-right: 2px solid black;">
                     <div class="row">
                         <h4 style="color: white;">Ryan Shook</h4>
                         <p style="color: white;"><i class="fa-solid fa-envelope" style="color: white;"></i> shookr@triton.uog.edu</p>
@@ -125,7 +125,7 @@
                         <p style="color: white;"><i class="fa-solid fa-phone" style="color: white;"></i> (671) 735-2333</p>
                     </div>
                 </div>
-                <div class="col-lg-6" style="display: flex; justify-content: center; align-items: center;  padding-top: 5%; padding-bottom: 5%; ">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6" style="display: flex; justify-content: center; align-items: center;  padding-top: 5%; padding-bottom: 5%; ">
                     <div class="container-fluid">
                         <h6 style="color: white;">Micronesian Area Research Center</h6>
                         <a href="https://www.google.com/maps/place/Micronesian+Area+Research+Center/@13.4331917,144.8022696,157m/data=!3m1!1e3!4m5!3m4!1s0x671f9d994e4ffca7:0x465ddd6e1e68b1a1!8m2!3d13.4332765!4d144.8024033"><img src="./marc_directions.jpg" alt="Directions to MARC." style="height: 100%; width: 100%;"></a>
